tests/fail/semantic/array-capacity-overflow.tiger
let
      var x := int [2] of 0
in
      x[2] = 1
end
